--- a/1_ANN_Cancer.ipynb
+++ b/1_ANN_Cancer.ipynb
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('../4NM21AI012/datasets/breast-cancer.csv')\n",
+    "df = pd.read_csv('./datasets/breast-cancer.csv')\n",
     "df.head()"
    ]
   },
